third_party/blink/renderer/modules/accessibility/ax_layout_object.cc
@@ -1916,18 +1916,6 @@ bool AXLayoutObject::CanHaveChildren() const {
   return AXNodeObject::CanHaveChildren();
 }
 
-void AXLayoutObject::UpdateChildrenIfNecessary() {
-  if (NeedsToUpdateChildren())
-    ClearChildren();
-
-  AXObject::UpdateChildrenIfNecessary();
-}
-
-void AXLayoutObject::ClearChildren() {
-  AXObject::ClearChildren();
-  children_dirty_ = false;
-}
-
 //
 // Properties of the object's owning document or page.
 //
